--- a/app/src/main/res/layout/nav_header_navication_bar2.xml
+++ b/app/src/main/res/layout/nav_header_navication_bar2.xml
@@ -23,13 +23,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Baki Khan"
+        android:id="@+id/name1"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/email1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="KhanBaki@gmail.com" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
