--- a/app/src/main/res/layout/activity_recycle.xml
+++ b/app/src/main/res/layout/activity_recycle.xml
@@ -45,7 +45,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/love_music"
+                        android:id="@+id/all_trips"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/backdrop_title"
@@ -67,8 +67,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
-                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-                />
+                app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
